fixed wrong font type for image sources

--- a/source-bundle/scss/molecules/block/_block-base.scss
+++ b/source-bundle/scss/molecules/block/_block-base.scss
@@ -45,7 +45,7 @@
 // put source under the image (palm)
 @mixin block-source--base() {
     font-size:          $medium-font-size;
-    font-family:        'drois-sans', sans-serif, Arial;
+    font-family:        'droid-sans', sans-serif, Arial;
     color:              $greySource;
     display:            block;
     line-height:        1.2em;
